modificato build.gradle per utilizzare le "preview features" di java 24