@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application' // 👈 serve per far funzionare `gradlew run`
 }
 
 group = 'uni.proj'
@@ -14,6 +15,19 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
-test {
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += '--enable-preview'
     useJUnitPlatform()
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
+}
+
+application {
+    mainClass = 'uni.proj.Main'
 }
